fix spacing on full tram line route name

--- a/src/components/Form/Step8SearchForService/AutoComplete/ServiceAutocomplete.module.scss
+++ b/src/components/Form/Step8SearchForService/AutoComplete/ServiceAutocomplete.module.scss
@@ -14,6 +14,10 @@
   text-transform: capitalize;
 }
 
+.routeName {
+  flex-grow: 1;
+}
+
 .selectedItemBox {
   padding: $size-sm;
   border: 1px solid get-color(primary);
